# recommendations

./: .gitignore  Cargo.toml  Makefile  package-lock.json  package.json  rollup.config.js
scss/: recommendations.scss
src/: lib.rs  main.rs
src/bestprices/: mod.rs
src/flights/: mod.rs
static/: index.html
