[package]
name = "recommendations"
version = "0.1.0"
authors = ["naomijub <jnaomi@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "recommendations"
path = "src/main.rs"

[dependencies]
stdweb = "0.4"
yew = "*"
failure = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[lib]
name = "recommendations_paso2"
path = "src/lib.rs"
